fix batch action / scope layout problem for other locales
Since CSS isn't yet advanced enough, we must resort to JS for this
layout to work with translations of different widths. :-/

This resolves #2888. Thanks to @philipgiuliani for pointing out the
problem.

--- a/app/assets/stylesheets/active_admin/components/_table_tools.css.scss
+++ b/app/assets/stylesheets/active_admin/components/_table_tools.css.scss
@@ -24,15 +24,10 @@ a.table_tools_button, .table_tools .dropdown_menu_button {
   }
 }
 
-// If the Batch Action selector is present, offset the scopes so that if they
-// overflow, they don't appear directly below the Batch Action selector itself.
-.table_tools .batch_actions_selector + .table_tools_segmented_control {
-  float: right;
-  width: calc(100% - 125px);
-}
-
 .table_tools_segmented_control {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 
   li {
     float: left;
